--- a/EmployeeApp/src/app/popup/popup.component.html
+++ b/EmployeeApp/src/app/popup/popup.component.html
@@ -14,7 +14,7 @@
   <section class="input">
 
      <md-select placeholder="Gender" name="gender" formControlName="gender">
-     <md-option *ngFor="let gender of lookupLists.genders" [value]="gender.value" >
+     <md-option *ngFor="let gender of lookupLists.gendersFilter" [value]="gender.value" >
       {{gender.viewValue}}
       </md-option>
       </md-select>
@@ -29,7 +29,7 @@
 	  
 	  <section class="toolbarFooter">
 	  <button md-button color="primary" type="submit" [disabled]="!form.valid">Save</button>
-	  <button md-button color="warn" (click)="onCancelClicked()"> Cancel</button>
+	  <button md-button color="warn" (click)="onClose()"> Cancel</button>
 	  </section>
   </form>
 </div>
