Upload Image Done - Status : Done

--- a/EmployeeApp/src/app/employee/employee.component.html
+++ b/EmployeeApp/src/app/employee/employee.component.html
@@ -1,6 +1,6 @@
 <section>
     <md-card class="employeeData"  (click)="showDeleteButton()" (click)="showInformation()" (click)="showColor()">
-        <img src="src/Sources/naruto.jpg" class="profilePicture">
+        <img src="src/Sources/{{employee.image}}" class="profilePicture">
         <p class="detail">
             {{employee.firstName}} {{employee.lastName}} <br>
             {{employee.grade}} <br>
