CSS Added . Status : Done

--- a/EmployeeApp/src/app/app.component.html
+++ b/EmployeeApp/src/app/app.component.html
@@ -12,7 +12,7 @@
                 Edward Chandra
             </li>
             <li>
-                SE-JP
+                SWD Red-JP
             </li>
         </ul>
     </section>
