--- a/EmployeeApp/src/app/app.component.css
+++ b/EmployeeApp/src/app/app.component.css
@@ -15,11 +15,11 @@
 
 .loggedIn_Details{
     width:90%;
-    
+    margin:10px;
 }
 
 .loggedIn_Details ul{
-    padding:10px;
+    padding:0px;
 }
 
 .loggedIn_Details li{
