--- a/EmployeeApp/src/app/list/list.component.css
+++ b/EmployeeApp/src/app/list/list.component.css
@@ -5,19 +5,21 @@
     margin:8px;
 }
 
-:host.highlight{
-    background-color: blue;
+.filterHighlight{
+    color:red !important;
 }
 
 .toolbar{
-   padding: 0px;
-   margin:0px;
+   font-family: Calibri;
+   padding:0px;
+   margin-left:10px;
+   margin-top:10px;
 }
 
 .content{
-    padding:5px;
-    margin: 10px;
-    height: 600px;
+    padding:0px;
+    margin: 0px;
+    height: 580px;
     overflow-y: auto;
 }
 
@@ -28,10 +30,5 @@
     z-index: 6;
 }
 
-md-basic-chip{
-   font-family: Calibri;
-    background-color:lightgrey;
-    border:thin solid white;
-    border-radius: 20px;
-}
+
 
