--- a/EmployeeApp/src/app/app.component.html
+++ b/EmployeeApp/src/app/app.component.html
@@ -4,7 +4,9 @@
       <i class="material-icons app-toolbar-menu">menu</i>
     </button>
 
+    <div class="profilePicture">
     <img src="src/Sources/profilePicture.png" id="loggedIn_Picture">
+    </div>
 
     <section class="loggedIn_Details">
         <ul>
