--- a/EmployeeApp/src/app/form/form.component.html
+++ b/EmployeeApp/src/app/form/form.component.html
@@ -148,7 +148,7 @@
 
   <section class="toolbarFooter">
     <div class="cancelButton">
-     <button md-raised-button color="warn" (click)="onCancelClicked()"> Cancel</button>
+     <button md-raised-button color="warn" type="button" (click)="onCancelClicked()"> Cancel</button>
    </div>
     <div class="submitButton">
      <button md-raised-button color="primary" type="submit" [disabled]="!form.valid">Save</button>
