Integrated Database Table, Bug Fixes, and CSS. Status:Finalizing

--- a/EmployeeApp/src/app/employee/employee.component.html
+++ b/EmployeeApp/src/app/employee/employee.component.html
@@ -5,7 +5,7 @@
 
                 {{employee.firstName}} {{employee.lastName}} <br>
                 {{employee.grade}},{{employee.division}} <br>
-                {{employee.location}},{{employee.phone}}
+                {{employee.location.locName}},{{employee.phone}}
             
         </div>
         <div class = "date">
